# rheed-realtime-analyzer

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: main.yml
docs/: PUBLISHING.md
rheed_core/: __main__.py  config.yaml  main.py
rheed_core/core/: buffers.py  draft_bridge.py  features.py  logging.py  offline_analysis.py  pipeline.py  policy.py  preprocess.py  state.py  types.py
rheed_core/core/draft codes/: AFM.py  Analysis.py  Analysis_umich.py  Dataset.py  Fit.py  Fitter1D.py  Fitting.py  Packed_functions.py  Viz.py  XRD.py
rheed_core/io/: collector_base.py  dummy_collector.py  dummy_operator.py  operator_base.py
tests/: README.md  demo_draft_bridge.ipynb  demo_offline_analysis.ipynb  demo_pipeline_integration.ipynb  test_draft_bridge.py  test_offline_analysis.py  test_pipeline.py  test_policy.py  test_state.py  test_state_relax_tau.py
